feat: Implement Stripe payment integration for credit card payments
- Added CreditCardForm component for handling credit card payments.
- Integrated Stripe API to create payment intents and handle payment confirmation.
- Updated createOrder function to accept payment details.
- Modified CheckoutPage to manage shipping and payment steps.
- Enhanced OrderConfirmationPage and OrderDetailPage to display payment method.
- Updated server-side order model to include payment details.
- Created payment routes and services for handling payment intents.
- Updated environment variables to include Stripe secret key.
- Seeded database with mock payment intents for testing.

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.0.0",
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
