feat: integrate Cloudinary for image uploads and management
- Added Cloudinary as a dependency and configured it for image storage.
- Implemented image upload routes for single and multiple images.
- Updated product routes to handle image deletion from Cloudinary when products are updated or deleted.
- Enhanced product editing page to support image uploads via Cloudinary.
- Created an ImageUpload component for handling image uploads in the client.
- Updated seed data to include Cloudinary image URLs and public IDs.
- Refactored address and cart routes for cleaner code.
- Added error handling for image uploads and deletions.

--- a/server/.env.example
+++ b/server/.env.example
@@ -7,5 +7,10 @@ MONGO_URI=mongodb://localhost:27017/react-retail
 # JWT secret key for authentication
 JWT_SECRET=your_jwt_secret_key_here
 
-# Stripe API key for payment processing (obtain from your Stripe dashboard)
+# Stripe API key for payment processing
 STRIPE_SECRET_KEY=your_stripe_secret_key_here
+
+# Cloudinary configuration for image uploads
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
