refactor: rename project from ReactRetail to LucEst and update related references

--- a/server/.env.example
+++ b/server/.env.example
@@ -2,7 +2,7 @@
 PORT=3000
 
 # MongoDB connection string
-MONGO_URI=mongodb://localhost:27017/react-retail
+MONGO_URI=mongodb://localhost:27017/your_database_name
 
 # JWT secret key for authentication
 JWT_SECRET=your_jwt_secret_key_here
